--- a/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
@@ -406,16 +406,18 @@ include::partial$publish-and-index-website.adoc[]
 
 Because we release from a branch, the changes made in the branch should be merged back from the release branch back into the `master` branch.
 
-In the `isis` repo (adjust RC number as required):
+In the `isis` repo ():
 
 [source,bash,subs="attributes+"]
 ----
-git checkout master                              # update master with latest
+RC=RC1                                                <.>
+git checkout master
 git pull
-git merge release-{page-isisrel}-RC1                  # merge branch onto master
-git push origin --delete release-{page-isisrel}-RC1   # remote branch no longer needed
-git branch -d release-{page-isisrel}-RC1              # branch no longer needed
+git merge release-{page-isisrel}-$RC
+git push origin --delete release-{page-isisrel}-$RC
+git branch -d release-{page-isisrel}-$RC
 ----
+<.> adjust RC number as required
 
 == Bump \{page-isisrel} in `site.yml`
 
