--- a/antora/components/relnotes/modules/ROOT/nav.adoc
+++ b/antora/components/relnotes/modules/ROOT/nav.adoc
@@ -3,6 +3,7 @@
 
 
 * 2022
+** xref:relnotes:ROOT:2022/2.0.0-M9/relnotes.adoc[2.0.0-M9]
 ** xref:relnotes:ROOT:2022/2.0.0-M8/relnotes.adoc[2.0.0-M8]
 ** xref:relnotes:ROOT:2022/2.0.0-M7/relnotes.adoc[2.0.0-M7]
 * 2021
