--- a/antora/components/refguide-index/modules/applib/pages/index/services/exceprecog/hooks/ExceptionRecognizer_010-implementation.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/exceprecog/hooks/ExceptionRecognizer_010-implementation.adoc
@@ -14,7 +14,7 @@ The framework provides a number of default implementations for JPA and JDO, to r
 * other data access problem.
 
 
-// TODO: v2 - flesh this out once ISIS-2502 is complete.
+// TODO: v2 - flesh this out once CAUSEWAY-2502 is complete.
 
 //=== Configuration Properties
 //
