--- a/antora/components/userguide/modules/fun/pages/ui/object-layout.adoc
+++ b/antora/components/userguide/modules/fun/pages/ui/object-layout.adoc
@@ -264,7 +264,7 @@ When downloading the layout files, there are four "styles" available:
 * complete
 * minimal
 
-// TODO: ISIS-3087: let's simplify and get rid of these
+// TODO: CAUSEWAY-3087: let's simplify and get rid of these
 //* current
 //* normalized
 
